# tuishogi

./: .gitignore  Makefile  README.md  autogen.sh  configure.ac  tuishogi.cpp
src/: Makefile  Makefile.am  tuishogi.cpp
test/: Makefile.am  run-test.sh  test-tuishogi.cpp
