AC_PREREQ(2.59)

AC_INIT(tuishogi, 0.0.2, myokoym@gmail.com)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADER([src/config.h])

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)

AC_PROG_LIBTOOL
AC_PROG_CXX

AC_CHECK_CPPCUTTER

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 test/Makefile])

AC_OUTPUT
